--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,8 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-/* where the reset ends */
+/* this applies to all text in the body */
 body {
   font-size: 14px;
 }
-
+/* this pertains only to the navigation */
 nav {
   background-color: yellow;
   height: 100px;
@@ -63,7 +15,7 @@ section {
   margin: 0 auto;
   width: 60%;
 }
-
+/* this applies to all header 1 */
 h1 {
   font-family: sans-serif;
   font-size: 2em;
@@ -73,14 +25,27 @@ h1 {
   padding-top: 30px;
   text-align: center;
 }
-
+/* this applies to all header 3 */
 h3 {
   font-size: 1.3em;
 }
-
+/* this applies to all elements */
 .element {
   background-color: green;
   height: 100px;
   margin: 10px 0;
   width: 100%;
+}
+
+/* this changes the color of the last 3 elements */
+#seven {
+  background-color: aquamarine;
+}
+
+#eight {
+  background-color: orangered;
+}
+
+#nine {
+  background-color: palegreen;
 }
